--- a/_test/html/editform.css
+++ b/_test/html/editform.css
@@ -48,7 +48,13 @@ textarea.err {
     border: 1px solid red;
 }
 
+.memo { }
+
 /* выпадающий список */
+.cbx { }
+
+.fcbx { }
+
 .cbxbn {
     border: 0px;
     padding: 0px;
@@ -104,7 +110,7 @@ button[disabled] img {
     filter: grayscale(100%);
 }
 
-/* таблица */
+/* таблица/запрос */
 .grid {
     border: 1px solid silver;
     overflow: auto;
@@ -134,6 +140,8 @@ button[disabled] img {
     font: inherit;
     background-color: #c7c78d;
     padding: 4px 2px;
+	position: sticky;
+	top: 0;
 }
 
 .grid td {
@@ -192,16 +200,22 @@ button[disabled] img {
 }
 
 /* в случае когда грид нередактируемый */
-.gridro tr:not(.gridbns) th:first-child {
+.gridro tr:not(.gridbns-up, .gridbns-down) th:first-child {
     display: none;
 }
 
-.gridro tr:not(.gridbns) td:first-child {
+.gridro tr:not(.gridbns-up, .gridbns-down) td:first-child {
     display: none;
 }
 
-/* кнопки внизу таблицы */
-.grid tr.gridbns button {
+/* кнопки "Еще", "Добавить" внизу таблицы */
+.grid tr.gridbns-down button {
+    margin: 0.5rem;
+    padding: 0.5rem 1rem;
+}
+
+/* кнопка "Еще" вверху под заголовком */
+.grid tr.gridbns-up button {
     margin: 0.5rem;
     padding: 0.5rem 1rem;
 }
@@ -223,6 +237,11 @@ button[disabled] img {
 }
 
 /* закладки */
+.pages[disabled] {
+    opacity: 0.4;
+    pointer-events: none;
+}
+
 .tabsheets {
     display: flex;
     align-items: flex-end;
@@ -313,12 +332,6 @@ button[disabled] img {
     background-color: #FDFDE9;
 }
 
-/* закладки */
-.pages[disabled] {
-    opacity: 0.4;
-    pointer-events: none;
-}
-
 /* Кнопки на форме */
 .bn {
     padding: 0px;
@@ -347,6 +360,39 @@ img.err {
 	object-position: center;
 	object-fit: scale-down;
 }
+
+/* Текст */
+.text { }
+
+/* Число */
+.num { 
+	text-align: right;
+}
+
+/* Дата */
+.dt { }
+
+/* Время */
+.tm { }
+
+/* Поле объекта */
+.objf { }
+
+/* Файл */
+.file { }
+
+/* ИД записи */
+.recid { 
+	text-align: right;
+}
+
+/* Счетчик */
+.counter { 
+	text-align: right;
+}
+
+/* Фигура */
+.shape { }
 
 /* Диаграммы (заглушка) */
 .chart {
