--- a/_test/html/main.css
+++ b/_test/html/main.css
@@ -73,6 +73,11 @@ html {
         font-size: 1.2rem;
         padding: 0.5rem;
     }
+	
+	.listcbx th {
+        font-size: 1.2rem;
+        padding: 0.5rem;
+    }
 
     .listbtns img {
         width: 2rem;
@@ -334,6 +339,9 @@ div table.list tr:hover {
 
 div table.list tr th {
     color: black;
+	background: #F0F0F0;
+	position: sticky;
+	top: 0;
 }
 
 .listbtns {
